add schedule scrapping for stop
